--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "coverage": "jest --silent --coverage",
+    "test:cover": "jest --silent --coverage",
     "lint": "eslint '*/**/*.{js,ts,md}'",
     "lint:fix": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "prettier:doc": "prettier *.md --write",
-    "build": "rimraf dist && tsc"
+    "type_check": "tsc --noEmit",
+    "build": "rimraf dist && tsc",
+    "whitelabel": "node ./scripts/whitelabel.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ozanmuyes/template-ts-swc-jest.git"
   },
   "keywords": [
+    "template",
     "nodejs",
     "typescript",
     "swc",
@@ -28,19 +31,23 @@
     "url": "https://github.com/ozanmuyes/template-ts-swc-jest/issues"
   },
   "homepage": "https://github.com/ozanmuyes/template-ts-swc-jest#readme",
+  "engines": {
+    "node": "^20"
+  },
   "devDependencies": {
-    "@swc-node/jest": "^1.6.5",
     "@swc-node/register": "^1.6.5",
     "@swc-node/sourcemap-support": "^0.3.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.62",
     "@swc/helpers": "^0.5.1",
+    "@swc/jest": "^0.2.29",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@tsconfig/node16": "^1.0.4",
+    "@tsconfig/node20": "^20.1.2",
     "@types/jest": "^29.5.2",
     "@types/node": "^16.11.22",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
+    "commander": "^11.1.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
