--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       ],
       "program": "${file}",
       "runtimeArgs": [
-        "${workspaceRoot}/node_modules/.bin/jest",
+        "${workspaceRoot}/node_modules/jest/bin/jest.js",
         "--runInBand",
       ],
       "console": "integratedTerminal",
@@ -30,10 +30,10 @@
       ],
       "program": "${workspaceFolder}/src/index.ts",
       "cwd": "${workspaceFolder}",
-      "envFile": "${workspaceFolder}/.vscode/.env",
       "runtimeExecutable": "node",
       "env": {
-        "SWCRC": "1"
+        "SWCRC": "1",
+        "APP_START_BANNER": "=== my-app ===",
       },
       "runtimeArgs": [
         "--nolazy",
