--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "zod": "^3.22.4"
   }
 }
